RESOLVED FIXED256748
REGRESSION (263946@main): Scroll momentum broken
https://bugs.webkit.org/show_bug.cgi?id=256748
Summary REGRESSION (263946@main): Scroll momentum broken
Simon Fraser (smfr)
Reported 2023-05-12 20:46:50 PDT
263946@main changed HysteresisActivity behavior in a way that caused WebPageProxy::updateDisplayLinkFrequency() to think that we weren't actively scrolling.
Attachments
Simon Fraser (smfr)
Comment 1 2023-05-12 20:47:08 PDT
Simon Fraser (smfr)
Comment 2 2023-05-12 20:53:49 PDT
EWS
Comment 3 2023-05-13 09:14:07 PDT
Committed 264049@main (373d24af71c6): <https://commits.webkit.org/264049@main> Reviewed commits have been landed. Closing PR #13846 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.